Fix unwanted animation that occurs after rotating screen

Changes:
Set the widget bounds after display metrics change based on the current
app list state instead of using initial widget bounds.

Bug: 893521
Change-Id: I370080e6822e2eb20aa391651b1de6737e0b90b0
Reviewed-on: https://chromium-review.googlesource.com/c/1272238
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598370}
Former-commit-id: bc343a32fdbbb756a32ef694ab5aebe06f934908